--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ runs/
 example/02_NMNIST_MLP/NMNISTsmall/
 example/03_NMNIST_CNN/NMNISTsmall/
 exampleLoihi/02_NMNIST/NMNISTsmall/
+slayerCuda.cp39-win_amd64.pyd
+slayerLoihiCuda.cp39-win_amd64.pyd
+personal/network2
+personal/optimizer2
