--- a/personal/cifar-10-DVS/network.yaml
+++ b/personal/cifar-10-DVS/network.yaml
@@ -5,11 +5,11 @@ simulation:
 neuron:
     type:     SRMALPHA
     theta:    10
-    tauSr:    10.0
-    tauRef:   1.0
+    tauSr:    40.0
+    tauRef:   4.0
     scaleRef: 2     # relative to theta
-    tauRho:   1     # relative to theta #0.43429448190325176
-    scaleRho: 1
+    tauRho:   10     # relative to theta #0.43429448190325176
+    scaleRho: 10
 training:
     error:
         # type: NumSpikes #ProbSpikes #NumSpikes
@@ -17,6 +17,6 @@ training:
         tgtSpikeRegion: {start: 0, stop: 1400}
         tgtSpikeCount: {true: 60, false: 10}
     path:
-        in: dataset/
-        train: dataset/train9000.txt
-        test: dataset/test1000.txt
+        in: dataset4/
+        train: dataset4/train9000.txt
+        test: dataset4/test1000.txt
