Fix bugs in the fashion mnist dataset

--- a/personal/fashionMNIST/fashionMNIST.yaml
+++ b/personal/fashionMNIST/fashionMNIST.yaml
@@ -17,6 +17,5 @@ training:
         tgtSpikeRegion: {start: 0, stop: 1400}
         tgtSpikeCount: {true: 220, false: 100}
     path:
-        in: ""
-        train: ""
-        test: ""
+        train: "dataset/fashion-mnist_train.csv"
+        test: "dataset/fashion-mnist_test.csv"
