Add the potential to change the derivative function for the spikes

--- a/personal/cifar-10-DVS/network.yaml
+++ b/personal/cifar-10-DVS/network.yaml
@@ -10,6 +10,7 @@ neuron:
     scaleRef: 2     # relative to theta
     tauRho:   1     # relative to theta #0.43429448190325176
     scaleRho: 1
+    rho: 0
 training:
     error:
         # type: NumSpikes #ProbSpikes #NumSpikes
