--- a/personal/network.yaml
+++ b/personal/network.yaml
@@ -10,6 +10,7 @@ neuron:
     scaleRef: 4     # relative to theta
     tauRho:   8     # relative to theta #0.43429448190325176
     scaleRho: 10
+    rho: 0
 training:
     error:
         # type: NumSpikes #ProbSpikes #NumSpikes
